--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "homepage": "https://github.com/leandrobellini/voxus.tv#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "connect-redis": "^3.3.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "method-override": "^2.3.10",
+    "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0"
   }
 }
